Add jQuery and bootstrap locally

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html>
   <head>
-    ...
   </head>
   <body>
     <div th:fragment="footer">
-      &copy; 2020 SmartBrains.io
+      <footer class="bg-dark text-white mt-4">
+      <div class="container-fluid py-3">
+          <div class="row">
+              <div class="col-md-3">
+                  <h5>Powered By Smart Brains</h5></div>
+              <div class="col-md-3"></div>
+              <div class="col-md-3"></div>
+              <div class="col-md-3"></div>
+          </div>
+          <div class="row">
+              <div class="col-md-6">An Open Source Effort
+                <span class="small">
+                <br><a href="/license">Terms of Use & License</a></span>
+              </div>
+              <div class="col-md-3"></div>
+              <div class="col-md-3 text-right small align-self-end">2020 SmartBrains.io</div>
+          </div>
+      </div>
+      </footer>
     </div>
   </body>
 </html>
+
+
