--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,20 +3,18 @@
 <head> 
     <title>SmartBrains.io</title> 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="/bootstrap/4.5.3/css/bootstrap.min.css">
 </head>
 <body>
-    
     <div th:replace="fragments/header :: header"/>
-    <center>
+    <div style="text-align: center">
     <h1>SmartBrains.io Home</h1>
     <p>Get your special greeting <a href="/greeting">here</a></p>
-    </center>
+    </div>
     <div th:replace="fragments/footer :: footer">
     <hr>
     Brought to you by <a href="http://jimmyhurff.com">Jimmy Hurff</a>
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    <script src="/jquery/3.5.1/jquery.min.js"></script>
+    <script src="/bootstrap/4.5.3/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
